<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout style="@style/Activity_Editor_Linear_Layout_Section_1">

        <TextView
            style="@style/Product_Add_Text_Style"
            android:text="@string/product_name" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/product_name_edit_text"
                style="@style/Product_Add_Form_Style"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/Activity_Editor_Linear_Layout_Section_1">


        <TextView
            style="@style/Product_Add_Text_Style"
            android:text="@string/product_price" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/product_price_edit_text"
                style="@style/Product_Add_Form_Style"
                android:hint="@string/product_price"
                android:inputType="number" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/Activity_Editor_Linear_Layout_Section_1">


        <TextView
            style="@style/Product_Add_Text_Style"
            android:text="@string/product_quantity" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/product_quantity_edit_text"
                style="@style/Product_Add_Form_Style"
                android:hint="@string/product_quantity"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/Activity_Editor_Linear_Layout_Section_1">


        <TextView
            style="@style/Product_Add_Text_Style"
            android:text="@string/product_supplier_name" />

        <Spinner
            android:id="@+id/product_supplier_name_spinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingEnd="16dp"
            android:spinnerMode="dropdown"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout style="@style/Activity_Editor_Linear_Layout_Section_1">

        <TextView
            style="@style/Product_Add_Text_Style"
            android:text="@string/product_supplier_phone_number" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/product_supplier_phone_number_edit_text"
                style="@style/Product_Add_Form_Style"
                android:hint="@string/product_supplier_phone_number"
                android:inputType="number"
                tools:ignore="TextFields" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>