<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout style="@style/Activity_View_Linear_Layout_Section_1">

        <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

            <TextView
                style="@style/Product_View_Title_Text_Style"
                android:text="@string/product_name" />
        </LinearLayout>

        <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

            <TextView
                android:id="@+id/product_name_view_text"
                style="@style/Product_View_Detail_Style" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/List_Item_Linear_Layout_Section_1">

        <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

            <TextView
                style="@style/Product_View_Title_Text_Style"
                android:text="@string/product_price" />
        </LinearLayout>

        <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

            <TextView
                android:id="@+id/product_price_view_text"
                style="@style/Product_View_Detail_Style" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/Activity_View_Linear_Layout_Section_1">

        <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

            <TextView
                style="@style/Product_View_Title_Text_Style"
                android:text="@string/product_quantity" />
        </LinearLayout>

        <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

            <TextView
                android:id="@+id/product_quantity_view_text"
                style="@style/Product_View_Detail_Style" />

            <LinearLayout
                style="@style/List_Item_Linear_Layout_Section_2"
                android:paddingStart="16dp"
                tools:ignore="RtlSymmetry">

                <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

                    <Button
                        android:id="@+id/increase_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="#11b962"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/plus"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

                    <Button
                        android:id="@+id/decrease_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="#fc0257"
                        android:layout_marginTop="8dp"
                        android:text="@string/minus"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/Activity_View_Linear_Layout_Section_1">

        <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

            <TextView
                style="@style/Product_View_Title_Text_Style"
                android:text="@string/product_supplier_name" />
        </LinearLayout>

        <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

            <TextView
                android:id="@+id/product_supplier_name_view_text"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingEnd="16dp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/Activity_View_Linear_Layout_Section_1">

        <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

            <TextView
                style="@style/Product_View_Title_Text_Style"
                android:text="@string/product_supplier_phone_number" />
        </LinearLayout>

        <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

            <LinearLayout style="@style/Activity_View_Linear_Layout_Section_1"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_supplier_phone_number_view_text"
                        style="@style/Product_View_Detail_Style" />
                </LinearLayout>

                <LinearLayout style="@style/List_Item_Linear_Layout_Section_2">

                    <Button
                        android:id="@+id/phone_button"
                        android:layout_width="35dp"
                        android:layout_height="40dp"
                        android:background="#e8e2e4"
                        android:drawableStart="@drawable/ic_phone_white_24dp"
                        android:focusable="false"
                        android:paddingStart="4dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/Activity_View_Linear_Layout_Section_1"
        android:gravity="center">

        <Button
            android:id="@+id/delete_button"
            style="@style/Activity_View_Button_Style"
            android:layout_marginTop="16dp"
            android:paddingBottom="8dp"
            android:background="#fc0257"
            android:drawableStart="@drawable/ic_delete_white_24dp"
            android:text="@string/delete_product" />
    </LinearLayout>
</LinearLayout>